# asteroids

./: CMakeLists.txt  README.md  run.sh
include/: asteroid.h  bullet.h  controller.h  game.h  game_object.h  hud.h  renderer.h  scene.h  scene_gameover.h  scene_intro.h  scene_manager.h  spaceship.h
src/: asteroid.cpp  bullet.cpp  controller.cpp  game.cpp  game_object.cpp  hud.cpp  main.cpp  renderer.cpp  scene.cpp  scene_gameover.cpp  scene_intro.cpp  scene_manager.cpp  spaceship.cpp
